kubernetes/mini/core/database/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
