kubernetes/mini/core/database/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: database
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
